# rust-penguins

./: .gitignore  Cargo.toml  Shuttle.toml
db/: schema.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts
src/: main.rs
src/handlers/: penguins.rs
src/models/: models.rs
src/routes/: route_all.rs
static/: index.html
static/assets/: index-dd8aa7fc.js
