[package]
name = "rust-penguins"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.28.2"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] } 
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json"] }
